# minka-link

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ChatWeb/: .env.example  index.html  mock-server.js  package-lock.json  package.json  test-backend.js  vite.config.js
ChatWeb/src/: App.jsx  index.css  main.jsx
ChatWeb/src/components/: AccessibilityWelcome.jsx  BarraBusqueda.jsx  ThemeToggle.jsx
ChatWeb/src/contexts/: AuthContext.jsx  ChatContext.jsx  ThemeContext.jsx
ChatWeb/src/hooks/: useSpeech.js
ChatWeb/src/pages/: Home.jsx  Page404.jsx  SignIn.jsx  (+1 more)
agents/: civic_orchestration.py  complaint_reporter_agent.py  local_rag_agent.py  rag_agent.py  user_memory.py
agents/tools/: README.md  __init__.py  azure_foundry_rag.py  bing_search_tools.py  nyc_services.py
backend/: function_app.py  requirements.txt
backend/app/: agent_client.py
config/: settings.py
data_user/: test_full_conversation_profile.json
docs/: COMPLAINT_REPORTER_SETUP.md  FILOSOFIA_MINKA.md  Sugerencias Gemini 3.docx  TOOLS_SUPERPODERES.md  casos-de-uso.md  desing.md  mvp.md
docs/es/: FILOSOFIA_MINKA-es.md
examples/: agent_rag.py  json-report-1.json  json-report-2.json  new_12_long_term_memory_AI.py  user_95da8e29_memory.json
ocr-pdf/: __init__.py  cdb_extract.py  recognition.py  recognition2.py  requirements.txt
reports.py/: add_data.py
scripts/: cleanup-resources.sh  model-available.sh  setup-resource.sh
src/civic_chat/: .env.example  main.py
user_data/: user_bc6102c9_memory.json  user_f611c11f_memory.json  usr_b163003b_memory.json
(+39 files in other folders)
