[project]
name = "chatbot-civic"
version = "0.1.0"
description = "A multi-agent, multilingual, voice-activated civic education chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework[azure-ai,openai]>=1.0.0b251120",
    "python-dotenv>=1.2.1",
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "httpx>=0.28.1",
    "python-jose>=3.5.0",
    "tenacity>=9.1.2",
    "passlib>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "flake8>=6.0.0",
    "pre-commit>=3.3.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["civic_chat*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
